# xradar

./: Cargo.toml  README.md
media/: README.md  xradar.cast
src/: cli.rs  main.rs
src/methods/: client.rs
